--- a/style.css
+++ b/style.css
@@ -775,4 +775,28 @@ body{
     line-height: 22px;
     text-align: center;
 }
+#panel-inicial{
+  border-color: #ddd;
+  opacity: .7;
+  margin-bottom: 0px;
+  margin-top: -100px;
+}
+.panel {
+  margin-bottom: 20px;
+  background-color: #000000;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+}
+.panel-transparent {
+    background: none;
+}
+
+.panel-transparent .panel-heading{
+    background: rgba(122, 130, 136, 0.2)!important;
+}
+
+.panel-transparent .panel-body{
+    background: rgba(46, 51, 56, 0.2)!important;
 }
