--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,3 +7,9 @@
     right: 45%;
     top: 45%;
 }
+#panel-inicial{
+  border-color: #ddd;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: -100px;
+}
