--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -42,25 +42,25 @@ of those sections to manage the look and feel of the site. */
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #c8c8c8;
+    background: #b1b1b1;
 }
 .feature-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #c8c8c8;
+    background: #b1b1b1;
 }
 .services-aero-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    background: #b1b1b1;
 }
 .services-ind-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #c8c8c8;
+    background: #b1b1b1;
 }
 
 /*.services-section {
