--- a/css/estilo-prueba.css
+++ b/css/estilo-prueba.css
@@ -10,6 +10,7 @@ html {
     height: 100%;
     padding-top: 200px;
     text-align: center;
+    background-color: transparent;
     /*background-image: url(../img/Banner/005.jpg);*/
     /*background-size: 100%;*/
     /*background-repeat: no-repeat;*/
@@ -22,6 +23,7 @@ html {
     border-color: rgb(66, 66, 66);
     border-style: solid;
     padding-bottom: 10px;
+    /*z-index: 20;*/
 }
 .txt-subtitulo{
     opacity: 1;
